<resources>
    <string name="app_name">Pizza Store</string>
    <string name="addTopping">Add Topping</string>
    <string name="delivery">Delivery</string>
    <string name="clearPizza">Clear Pizza</string>
    <string name="checkout">Checkout</string>
    <string name="yourOrder">Your Order</string>
    <string name="basePrice">Base Price :</string>
    <string name="basePriceValue" />
    <string name="toppings">Toppings :</string>
    <string name="toppingsValue" />
    <string name="toppingList" />
    <string name="deliveryCost">Delivery Cost :</string>
    <string name="deliveryCostValue" />
    <string name="total"><u>Total :</u></string>
    <string name="totalCost"><u></u></string>
    <string name="finish">Finish</string>
</resources>
